--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     </div>
   </main>
 
-  <main class="question _1">
+  <main class="question">
     <div class="question__top">
       <div class="question__top-progress">
         <div class="question__top-progress-show"></div>
